package integration

import (
	"context"
	"testing"

	pb "github.com/metargb/shared/proto/features"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// TestFeaturesList tests the features listing with bounding box
func TestFeaturesList(t *testing.T) {
	// TODO: Implement full test
	// 1. Connect to features-service gRPC
	// 2. Call ListFeatures with bbox
	// 3. Verify response matches Laravel output
	// 4. Compare with golden JSON file

	conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		t.Fatalf("Failed to connect: %v", err)
	}
	defer conn.Close()

	client := pb.NewFeatureServiceClient(conn)
	
	req := &pb.ListFeaturesRequest{
		Points: []string{"0,0", "100,0", "100,100", "0,100"},
		LoadBuildings: false,
	}

	resp, err := client.ListFeatures(context.Background(), req)
	if err != nil {
		t.Fatalf("ListFeatures failed: %v", err)
	}

	if resp.Features == nil {
		t.Error("Expected features, got nil")
	}

	// TODO: Compare with golden JSON
	t.Logf("Received %d features", len(resp.Features))
}

// TestFeaturePurchaseFlow tests the complete purchase flow
func TestFeaturePurchaseFlow(t *testing.T) {
	// TODO: Implement
	// 1. Create test user (via auth service)
	// 2. Fund user wallet (via commercial service)
	// 3. Buy feature (via features service)
	// 4. Verify ownership transfer
	// 5. Verify wallet deduction
	// 6. Verify transaction creation
	// 7. Verify hourly profit creation
	
	t.Skip("Full implementation pending")
}

// TestBuyRequestFlow tests buy request submission and acceptance
func TestBuyRequestFlow(t *testing.T) {
	// TODO: Implement
	// 1. Send buy request
	// 2. Verify wallet lock
	// 3. Accept buy request as seller
	// 4. Verify ownership transfer
	// 5. Verify wallet updates (buyer, seller, RGB commission)
	// 6. Verify request deletion
	// 7. Verify other requests canceled
	
	t.Skip("Full implementation pending")
}

// TestHourlyProfitCalculation tests the background profit calculator
func TestHourlyProfitCalculation(t *testing.T) {
	// TODO: Implement
	// 1. Create feature with hourly profit
	// 2. Wait for background job or trigger manually
	// 3. Verify profit incremented by stability * 0.000041666
	
	t.Skip("Full implementation pending")
}

// TestBuildingConstruction tests the building system
func TestBuildingConstruction(t *testing.T) {
	// TODO: Implement
	// 1. Get build package from 3D API (mock)
	// 2. Build feature with model
	// 3. Verify hourly profits deactivated
	// 4. Verify construction_end_date calculated
	// 5. Destroy building
	// 6. Verify hourly profits reactivated
	
	t.Skip("Full implementation pending")
}

